유저 테스트 Controler 추가
1. 내 정보 가져오기

2. 유저 정보 가져오기

3. 내 분석 정보 가져오기